# CorePhotoEditor

./: .gitignore  README.md  settings.gradle.kts
adjust/: build.gradle.kts
adjust/src/main/assets/: lut_presets.json
adjust/src/main/assets/filter/: lut_presets.json  table_AQUA.table  table_BEIGE.table  table_BLUSH.table  table_BRONZE.table  table_CIN90.table  table_CLOUD.table  table_CYBER.table  table_DRAMA.table  table_DREAMY.table  table_FAIRY.table  table_FLUFFY.table  table_FUJI400H.table  table_GRAINY.table  table_HI_CON.table  table_HONEY.table  table_LAVENDER.table  table_MIST.table  table_MONO.table  table_MOODY.table  table_PEACHY.table  table_PEARL.table  table_RETROPOP.table  table_SEPIA.table  table_SKYLINE.table  table_SOUL.table  table_SUNNY.table  table_URBAN.table  table_VIN1_Classic_Film.table  table_VIN2_Faded_Warm.table  table_VIN3_Cold_Retro.table  table_VIN4_Antique_Grain.table
adjust/src/main/assets/filters/: BWFilmGrain.table  BWMatte.table  BWSharp.table  Breeze.table  Candy.table  ChromeTone.table  CineAmber.table  CineBlue.table  CineFade.table  Classicbw.table  Clean.table  CoolShade.table  CreamySmoothMatte.table  CyberCity.table  DustyStreet.table  Fade.table  FilmMattePortrait.table  Glitch.table  Icy.table  KoreanBrightMatte.table  MatteLook.table  Mint.table  NeutralSkin.table  NightMood.table  Nightcity.table  PastelSkin.table  PastelSoftMatte.table  RetroWave.table  RoseFade.table  SodiumLight.table  Steel.table  StudioAnalog.table  StudioNeutral.table  SunsetGlow.table  TableBWHighContrast.table  TableBWInfrared.table  TableBloomWarm.table  TableBrightskin.table  TableCafeTone.table  TableCandyTone.table  (+30 more)
adjust/src/main/cpp/: AdjustProcessor.cpp  CMakeLists.txt  adjust.cpp  adjust_color.cpp  adjust_common.h  adjust_detail.cpp  adjust_hsl.cpp  adjust_light.cpp
adjust/src/main/java/com/core/adjust/: AdjustManager.kt  AdjustMask.kt  AdjustParams.kt  AdjustProcessor.kt  AdjustProgress.kt
adjust/src/main/java/com/core/adjust/model/: AdjustSlider.kt  AdjustTab.kt  ColorChannel.kt  ColorPillUi.kt  HslAdjustState.kt  HslTriple.kt
adjust/src/main/java/com/core/adjust/model/lut/: LutFilter.kt  LutGroup.kt  LutPresetRoot.kt
adjust/src/main/java/com/core/adjust/module/: AdjustSlider.kt  AdjustTab.kt
adjust/src/main/java/com/core/adjust/ui/: AdjustViewModel.kt  ColorMixerFragment.kt  ColorMixerViewModel.kt  ColorPillAdapter.kt  ShareAdjustViewModel.kt
adjust/src/main/java/com/core/adjust/ui/adapter/: CategoryPagerAdapter.kt
adjust/src/main/java/com/core/adjust/ui/adjust/: AdjustAdapter.kt  AdjustFragment.kt
adjust/src/main/java/com/core/adjust/ui/filter/: CategoryPagerAdapter.kt  FilterFragment.kt
adjust/src/main/java/com/core/adjust/ui/filter/child/adjust/: AdjustAdapter.kt  AdjustFragment.kt
adjust/src/main/java/com/core/adjust/ui/filter/child/filter/: ChildFilterFragment.kt  ChildFilterViewModel.kt  CustomScrollLinearLayoutManager.kt  FilterAdapter.kt  FilterCategoryAdapter.kt
adjust/src/main/java/com/core/adjust/ui/hsl/: ColorMixerFragment.kt  ColorMixerViewModel.kt
adjust/src/main/java/com/core/adjust/utils/: FilterSuggestionUtils.kt  GsonUtils.kt  ImageViewEx.kt
adjust/src/main/res/anim/: slide_in_bottom.xml  slide_out_bottom.xml
adjust/src/main/res/color/: color_text_selected.xml
adjust/src/main/res/drawable/: bg_adjust_item_selected.xml  bg_adjust_item_unselected.xml  bg_pill_circle.xml  f_ic_done_selected.xml  f_ic_reset.xml  f_ic_reset_selected.xml  f_ic_seek_thumb.xml  f_ic_targeted.xml  f_ic_targeted_active.xml  f_ic_targeted_selector.xml  f_seekbar_style.xml  ic_brightness.xml  ic_brightness_selected.xml  ic_clarity.xml  ic_clarity_selected.xml  ic_contrast.xml  ic_contrast_selected.xml  ic_dehaze.xml  ic_dehaze_selected.xml  ic_exposure.xml  ic_exposure_selected.xml  ic_grain.xml  ic_grain_selected.xml  ic_highlights.xml  ic_highlights_selected.xml  ic_saturation.xml  ic_saturation_selected.xml  ic_shadows.xml  ic_shadows_selected.xml  ic_targeted_selector.xml  ic_temperature.xml  ic_temperature_selected.xml  ic_texture.xml  ic_texture_selected.xml  ic_tint.xml  ic_tint_selected.xml  ic_vibrance.xml  ic_vibrance_selected.xml  ic_vignette.xml  ic_vignette_selected.xml  (+22 more)
adjust/src/main/res/layout/: f_fragment_adjust.xml  f_fragment_child_filter.xml  f_fragment_color_mixer.xml  f_fragment_filter.xml  f_item_adjust.xml  f_row_slider_hsl.xml  fragment_color_mixer.xml  item_color_pill.xml  item_filter.xml  item_filter_category.xml  row_slider_hsl.xml
adjust/src/main/res/values/: colors.xml  ids.xml  themes.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/photoeditor/model/: AdjustSlider.kt  AdjustTab.kt
app/src/main/java/com/example/photoeditor/ui/activity/: AdjustRepository.kt  BaseActivity.kt  BottomPanelController.kt  MainActivity.kt
app/src/main/java/com/example/photoeditor/ui/adapter/: AdjustSliderAdapter.kt  AdjustTabAdapter.kt
app/src/main/java/com/example/photoeditor/utils/: DialogUtils.kt  ImageSizeCalculator.kt  LoadUtils.kt
app/src/main/java/com/example/photoeditor/utils/extensions/: ActivityExtensions.kt  AndroidExtensions.kt  BitmapExt.kt  ContextExtensions.kt  ImageViewExt.kt
app/src/main/java/com/example/photoeditor/utils/result/: OpenAppSystemSettingsContract.kt  RequestPermissionContract.kt
app/src/main/res/drawable/: ic_tab_color.xml  ic_tab_effects.xml  ic_tab_light.xml
app/src/main/res/layout/: activity_main.xml  dialog_denied_permissions.xml  dialog_write_storage.xml  include_bottom_panel.xml  item_adjust_slider.xml  item_adjust_tab.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
